Upload new Lab 2

--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,13 @@
+@Article{BickelEtAl1973,
+  author = {P. J. Bickel and E. A. Hammel and J. W. O'Connell},
+  title = {Sex Bias in Graduate Admissions: Data from {Berkeley}},
+  year = 1973,
+  journal = {Science},
+  volume = 187,
+  number = 4175,
+  pages = {398--404}
+}
+
 @Book{Kruschke2015,
   author = {John K. Kruschke},
   title =   {Doing {Bayesian} Data Analysis: A Tutorial with {R}, {JAGS}, and {Stan}},
