Upload title image for lab 2

--- a/02-sampling.Rmd
+++ b/02-sampling.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 ```
 
 ```{r, echo=FALSE, out.width="100%"}
-# knitr::include_graphics("img/titanic.png")
+knitr::include_graphics("img/simpsons.png")
 ```
 
 In the previous activity, we got some exposure to how we can explore data in R in such a way that we can use data to help answer questions.  In this activity, we will get a sense of where data come from and how the processes that produce data can force us to change our interpretations.
