--- a/04-numerical_relationships.Rmd
+++ b/04-numerical_relationships.Rmd
@@ -77,7 +77,7 @@ b. Does the correlation coefficient (`r`) provide a good summary of whether or h
 
 ## And now for a word
 
-*Psycholinguistics* is the study of the perceptual and cognitive processes involved in learning, understanding, and producing language.  One of the ways psycholinguists study language processing is using a "lexical decision task".  In a lexical decision task, participants are shown strings of letters; sometimes, these make real words (like "AUTHOR") and sometimes they don't (like "AWBLOR").  The time someone takes to decide that a string of letters is a real word (AUTHOR) is a measure of how easily knowledge about that word can be accessed.  By looking at the relationships between lexical decision time and different properties of a word, we can begin to understand the processes by which we organize and access our knowledge of language.  In other words, lexical decision time tells us how the "mental dictionary" is structured.
+*Psycholinguistics* is the study of the perceptual and cognitive processes involved in learning, understanding, and producing language.  One of the ways psycholinguists study language processing is using a "lexical decision task".  In a lexical decision task, participants are shown strings of letters; sometimes, these make real words (like "AUTHOR") and sometimes they don't (like "AWBLOR").  The time someone takes to decide that a string of letters is a real word (AUTHOR) is a measure of how easily knowledge about that word can be accessed.  By looking at the relationships between **lexical decision time (LDT)** and different properties of a word, we can begin to understand the processes by which we organize and access our knowledge of language.  In other words, lexical decision time tells us how the "mental dictionary" is structured.
 
 The [English Lexicon Project](https://elexicon.wustl.edu/) has been collecting this kind of data from a lot of people with many different words in the English language.  They report the mean lexical decision time for a word, along with a number of other properties of the word.  We will treat the mean lexical decision time as the **response variable** and examine its relationships to a number of other **explanatory variables**.
 
