--- a/book.bib
+++ b/book.bib
@@ -114,3 +114,26 @@
     number = 7,
     pages = {645--647}
 }
+
+@Article{FarmerEtAl2017,
+author = {George D. Farmer and Simon Baron-Cohen and William J. Skylark},
+title ={People With Autism Spectrum Conditions Make More Consistent Decisions},
+journal = {Psychological Science},
+volume = {28},
+number = {8},
+pages = {1067--1076},
+year = {2017},
+doi = {10.1177/0956797617694867},
+    note ={PMID: 28635378},
+
+URL = { 
+        https://doi.org/10.1177/0956797617694867
+    
+},
+eprint = { 
+        https://doi.org/10.1177/0956797617694867
+    
+}
+,
+    abstract = { People with autism spectrum conditions (ASC) show reduced sensitivity to contextual stimuli in many perceptual and cognitive tasks. We investigated whether this also applies to decision making by examining adult participants’ choices between pairs of consumer products that were presented with a third, less desirable “decoy” option. Participants’ preferences between the items in a given pair frequently switched when the third item in the set was changed, but this tendency was reduced among individuals with ASC, which indicated that their choices were more consistent and conventionally rational than those of control participants. A comparison of people who were drawn from the general population and who varied in their levels of autistic traits revealed a weaker version of the same effect. The reduced context sensitivity was not due to differences in noisy responding, and although the ASC group took longer to make their decisions, this did not account for the enhanced consistency of their choices. The results extend the characterization of autistic cognition as relatively context insensitive to a new domain, and have practical implications for socioeconomic behavior. }
+}
