--- a/book.bib
+++ b/book.bib
@@ -137,3 +137,19 @@ eprint = {
 ,
     abstract = { People with autism spectrum conditions (ASC) show reduced sensitivity to contextual stimuli in many perceptual and cognitive tasks. We investigated whether this also applies to decision making by examining adult participants’ choices between pairs of consumer products that were presented with a third, less desirable “decoy” option. Participants’ preferences between the items in a given pair frequently switched when the third item in the set was changed, but this tendency was reduced among individuals with ASC, which indicated that their choices were more consistent and conventionally rational than those of control participants. A comparison of people who were drawn from the general population and who varied in their levels of autistic traits revealed a weaker version of the same effect. The reduced context sensitivity was not due to differences in noisy responding, and although the ASC group took longer to make their decisions, this did not account for the enhanced consistency of their choices. The results extend the characterization of autistic cognition as relatively context insensitive to a new domain, and have practical implications for socioeconomic behavior. }
 }
+
+@Article{AwadEtAl2020,
+	author = {Awad, Edmond and Dsouza, Sohan and Shariff, Azim and Rahwan, Iyad and Bonnefon, Jean-Fran{\c c}ois},
+	title = {Universals and variations in moral decisions made in 42 countries by 70,000 participants},
+	volume = {117},
+	number = {5},
+	pages = {2332--2337},
+	year = {2020},
+	doi = {10.1073/pnas.1911517117},
+	publisher = {National Academy of Sciences},
+	abstract = {We report the largest cross-cultural study of moral preferences in sacrificial dilemmas, that is, the circumstances under which people find it acceptable to sacrifice one life to save several. On the basis of 70,000 responses to three dilemmas, collected in 10 languages and 42 countries, we document a universal qualitative pattern of preferences together with substantial country-level variations in the strength of these preferences. In particular, we document a strong association between low relational mobility (where people are more cautious about not alienating their current social partners) and the tendency to reject sacrifices for the greater good{\textemdash}which may be explained by the positive social signal sent by such a rejection. We make our dataset publicly available for researchers.When do people find it acceptable to sacrifice one life to save many? Cross-cultural studies suggested a complex pattern of universals and variations in the way people approach this question, but data were often based on small samples from a small number of countries outside of the Western world. Here we analyze responses to three sacrificial dilemmas by 70,000 participants in 10 languages and 42 countries. In every country, the three dilemmas displayed the same qualitative ordering of sacrifice acceptability, suggesting that this ordering is best explained by basic cognitive processes rather than cultural norms. The quantitative acceptability of each sacrifice, however, showed substantial country-level variations. We show that low relational mobility (where people are more cautious about not alienating their current social partners) is strongly associated with the rejection of sacrifices for the greater good (especially for Eastern countries), which may be explained by the signaling value of this rejection. We make our dataset fully available as a public resource for researchers studying universals and variations in human morality.},
+	issn = {0027-8424},
+	URL = {https://www.pnas.org/content/117/5/2332},
+	eprint = {https://www.pnas.org/content/117/5/2332.full.pdf},
+	journal = {Proceedings of the National Academy of Sciences}
+}
