--- a/07-normal_distribution.Rmd
+++ b/07-normal_distribution.Rmd
@@ -47,7 +47,7 @@ The variable we will focus on in this section is the number of hours people repo
 
 #### Visualize the distribution
 
-As usual, we begin by visualizing the actual data.  As a reminder, we will assume for the time being that these data constitute the entire population of interest.  The histogram below shows the population distribution of resting heart rates:
+As usual, we begin by visualizing the actual data.  As a reminder, we will assume for the time being that these data constitute the entire population of interest.  The histogram below shows the population distribution of nightly hours of sleep:
 
 ```{r}
 nhanes %>%
