--- a/book.bib
+++ b/book.bib
@@ -153,3 +153,19 @@ eprint = {
 	eprint = {https://www.pnas.org/content/117/5/2332.full.pdf},
 	journal = {Proceedings of the National Academy of Sciences}
 }
+
+@article {Wang2019,
+	author = {Wang, Pu and Berzin, Tyler M and Glissen Brown, Jeremy Romek and Bharadwaj, Shishira and Becq, Aymeric and Xiao, Xun and Liu, Peixi and Li, Liangping and Song, Yan and Zhang, Di and Li, Yi and Xu, Guangre and Tu, Mengtian and Liu, Xiaogang},
+	title = {Real-time automatic detection system increases colonoscopic polyp and adenoma detection rates: a prospective randomised controlled study},
+	volume = {68},
+	number = {10},
+	pages = {1813--1819},
+	year = {2019},
+	doi = {10.1136/gutjnl-2018-317500},
+	publisher = {BMJ Publishing Group},
+	abstract = {Objective The effect of colonoscopy on colorectal cancer mortality is limited by several factors, among them a certain miss rate, leading to limited adenoma detection rates (ADRs). We investigated the effect of an automatic polyp detection system based on deep learning on polyp detection rate and ADR.Design In an open, non-blinded trial, consecutive patients were prospectively randomised to undergo diagnostic colonoscopy with or without assistance of a real-time automatic polyp detection system providing a simultaneous visual notice and sound alarm on polyp detection. The primary outcome was ADR.Results Of 1058 patients included, 536 were randomised to standard colonoscopy, and 522 were randomised to colonoscopy with computer-aided diagnosis. The artificial intelligence (AI) system significantly increased ADR (29.1\%vs20.3\%, p\&lt;0.001) and the mean number of adenomas per patient (0.53vs0.31, p\&lt;0.001). This was due to a higher number of diminutive adenomas found (185vs102; p\&lt;0.001), while there was no statistical difference in larger adenomas (77vs58, p=0.075). In addition, the number of hyperplastic polyps was also significantly increased (114vs52, p\&lt;0.001).Conclusions In a low prevalent ADR population, an automatic polyp detection system during colonoscopy resulted in a significant increase in the number of diminutive adenomas detected, as well as an increase in the rate of hyperplastic polyps. The cost{\textendash}benefit ratio of such effects has to be determined further.Trial registration number ChiCTR-DDD-17012221; Results.},
+	issn = {0017-5749},
+	URL = {https://gut.bmj.com/content/68/10/1813},
+	eprint = {https://gut.bmj.com/content/68/10/1813.full.pdf},
+	journal = {Gut}
+}
