--- a/book.bib
+++ b/book.bib
@@ -169,3 +169,14 @@ eprint = {
 	eprint = {https://gut.bmj.com/content/68/10/1813.full.pdf},
 	journal = {Gut}
 }
+
+@article{MathyEtAl2018,
+    author = {Fabien Mathy and Mustapha Chekaf and Nelson Cowan},
+    title = {Simple and Complex Working Memory Tasks Allow Similar Benefits of Information Compression},
+    year = 2018,
+    journal = {Journal of Cognition},
+    volume = 1,
+    number = 1,
+    pages = {1--12},
+    doi = {https://doi.org/10.5334/joc.31}
+}
