--- a/book.bib
+++ b/book.bib
@@ -8,6 +8,16 @@
   pages = {398--404}
 }
 
+@Article{SchroederEpley2015,
+    author = {Juliana Schroeder and Nicholas Epley},
+    title = {The Sound of Intellect: Speech Reveals a Thoughtful Mind, Increasing a Job Candidate's Appeal},
+    year = 2015,
+    journal = {Psychological Science},
+    volume = 26,
+    number = 6,
+    pages = {877--891}
+}
+
 @Book{Kruschke2015,
   author = {John K. Kruschke},
   title =   {Doing {Bayesian} Data Analysis: A Tutorial with {R}, {JAGS}, and {Stan}},
