--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,13 @@
+@Article{JamesEtAl2015,
+    author = {Ella L. James and Michael B. Bonsall and Laura Hoppitt and Elizabeth M. Tunbridge and John R. Geddes and Amy L. Milton and Emily A. Holmes},
+    title = {Computer Game Play Reduces Intrusive Memories of Experimental Trauma via Reconsolidation-Update Mechanisms},
+    year = 2015,
+    journal = {Psychological Science},
+    volume = 26,
+    number = 8,
+    pages = {1201--1215}
+}
+
 @Article{BickelEtAl1973,
   author = {P. J. Bickel and E. A. Hammel and J. W. O'Connell},
   title = {Sex Bias in Graduate Admissions: Data from {Berkeley}},
