fix lab 12 data

--- a/12-multiple_groups.Rmd
+++ b/12-multiple_groups.Rmd
@@ -47,7 +47,7 @@ According to reconsolidation theory, people in the reactivation-plus-Tetris cond
 Load the relevant data into R now:
 
 ```{r}
-tetris_data <- read_csv("data/tetris.csv")
+tetris_data <- read_csv("https://raw.githubusercontent.com/gregcox7/StatLabs/main/data/tetris.csv")
 
 tetris_data
 ```
