--- a/01-exploring.Rmd
+++ b/01-exploring.Rmd
@@ -1,4 +1,4 @@
-# Exploring Data with R {#lab1}
+# Exploring data with R {#lab1}
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -20,7 +20,7 @@ In this session, we will learn a bit about data and how to explore it using R/RS
 
 As you follow along in this activity, you will be asked to run bits of code in RStudio.  This code can be copied-and-pasted into the "Console" at the lower left of RStudio.  You will also be asked to modify code and run it yourself, which again you can do by typing your code into the console.
 
-When the document shows you a snippet of code, it also shows typical R output that should result from running that code.  For example, the following snippet of code adds two numbers; the way R prints the result is shown below the snippet of code.
+When this document shows you a snippet of code, it also shows typical R output that should result from running that code.  For example, the following snippet of code adds two numbers; the way R prints the result is shown below the snippet of code.
 
 ```{r}
 2 + 3
@@ -46,7 +46,7 @@ Even if you don't have access to a computer with RStudio installed locally, you 
 
 ## Required packages
 
-Once you have RStudio up and running, run the following line of code by copying it and pasting it after the ">" in the "Console" in the lower left pane of the RStudio window.
+Once you have RStudio up and running, run the line of code in the grey box below by copying it and pasting it after the ">" in the "Console" in the lower left pane of the RStudio window.
 
 ```{r}
 library(tidyverse)
@@ -209,7 +209,27 @@ We find proportions by taking a count and dividing by a sum of counts.  Specific
 $$
 \text{Proportion of A that are B} = \frac{\text{Number of A that are B}}{\text{Total number of A's}}
 $$
-We can do this in code by adding a line to the code we used to make our counts.
+
+#### R is a fancy calculator
+
+Let's use the numbers in the frequency table above to find the proportion of male passengers who survived and the proportion of female passengers who survived.  This will illustrate how, although R is quite powerful, it is in many ways just a fancy calculator.  But a calculator is still handy!
+
+From the table we just made, we see that 339 female passengers survived.  There are $339 + 127$ total female passengers.  So we can use R to find the *proportion* of female passengers who survived using the line of code below:
+
+```{r}
+339 / (339 + 127)
+```
+
+Notice that `/` stands for "division" and we put $339 + 127$ in *parentheses* to tell R that that whole sum should be in the denominator.
+
+::: {.exercise}
+Find the proportion of *male* passengers who survived.  Is this higher or lower than the proportion of female passengers who survived?  Is the result you found consistent with the "women and children first" policy?
+
+:::
+
+#### Another way to get proportions
+
+One thing you will notice with R is that there are many ways to do the same thing.  Instead of calculating proportions by hand, we can add a line to the code we used to make the frequency table before to get R to give us the proportions of female and male passengers who did and did not survive:
 
 ```{r}
 titanic %>%
@@ -218,10 +238,17 @@ titanic %>%
   mutate(p = n / sum(n))
 ```
 
-The new column `p` is a proportion and represents the proportion of people in each group (either male or female) who either did or did not survive.  It is now easier to see that this proportion is much higher for female than male passengers, consistent with our hypothesis.
+The new column `p` is a proportion and represents the proportion of people in each group (either male or female) who either did or did not survive.  Notice that the numbers in the `p` column for male and female survivors are the same as the ones we found in the preceding section.
 
 ::: {.exercise}
-Write and run code that gives us a table, like the one above, which shows the proportion of people in each Class (First, Second, and Third) who survived or died.  Again, you will find it helpful to start from code we already used and modify it accordingly.
+Write and run code that gives us a table, like the one above, which shows the proportion of people in each Class (First, Second, and Third) who survived or died.  Again, you will find it helpful to start from code we already used and try filling in the blanks:
+
+```{r eval=FALSE}
+titanic %>%
+  group_by(___, survived) %>%
+  summarize(n = n()) %>%
+  mutate(p = n / sum(n))
+```
 
 What code did you use?  Which Class had the highest proportion of survivors?
 
@@ -259,7 +286,7 @@ titanic %>%
 The line at the end splits the plot into different "facets", one for each level of the `residence` variable.  Note that we have to put the "faceting" variable name in quotes (for some reason).  The result makes it easy to see that the distribution of passengers across classes is different depending on where they were from---Americans on the *Titanic* tended to be wealthier first class passengers, relative to passengers from Britain or elsewhere.
 
 ::: {.exercise}
-Make a bar chart that shows the number of people who either did or did not survive depending on their country of residence.  To do this, fill in the blanks in the code below:
+Make a bar chart that shows the number of people who either did or did not survive depending on their country of residence.  To do this, fill in the blanks in the code below so that each "facet" corresponds to country of residence and each "facet" has two bars in it, one bar for survivors and one bar for non-survivors.
 
 ```{r eval = FALSE}
 titanic %>%
@@ -269,8 +296,6 @@ titanic %>%
 ```
 
 What code did you use?  What is a possible reason why the relative number of survivors is different depending on where passengers were from?
-
-Attach a copy of the plot you made.  You can do this by saving the chart as a file using the "Export" menu in the "Plots" pane in RStudio.
 
 :::
 
@@ -327,15 +352,13 @@ titanic %>%
   facet_wrap("survived")
 ```
 
-What bin width do you believe gives the best visual summary and why?  Do the shapes of the histograms suggest that there was any influence of the "women and *children* first" rule on who survived?
-
-Attach a copy of the plot you made with your favorite bin width (again, you can do this by saving your plot as a file using the "Export" menu in RStudio's Plots pane).
+What bin width do you believe gives the best visual summary and why?  Describe whether the shapes of the histograms in each facet are consistent with the "women and *children* first" rule.
 
 :::
 
 ## Wrap-up
 
-Today we began our adventure by using RStudio to explore some data.  We saw how to look at data and how to summarize it in various helpful ways.  These were frequency tables, bar charts, and histograms.
+Today we began our adventure by using RStudio to explore some data.  We saw how to look at data and how to summarize it in various helpful ways.  These were frequency tables, proportions, bar charts, and histograms.
 
 * Frequency tables count the number of times a particular value of a particular variable (or combination of values across multiple variables) occurs in our dataset.
 * We can use the counts in frequency tables to calculate proportions, which are better at conveying relative values.
