Minor tweak to lab 12 exercise 1.

--- a/12-multiple_groups.Rmd
+++ b/12-multiple_groups.Rmd
@@ -68,8 +68,6 @@ b. Fill in the blanks in the code below to use `mutate` to create a new variable
 ```{r eval = FALSE}
 tetris_data %>%
     mutate(effect = ___ - ___)
-
-tetris_data
 ```
 
 :::
@@ -83,7 +81,7 @@ Fill in the blanks in the code below to make a boxplot that compares the distrib
 ```{r eval=FALSE}
 tetris_data %>%
     mutate(effect = ___ - ___) %>%
-    ggplot(aes(x = condition, y = effect)) +
+    ggplot(aes(x = ___, y = effect)) +
     geom_boxplot()
 ```
 
